--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-hipchat": "~2.6.4",
     "cheerio": "0.7.0",
-    "hubot-lunch": "https://github.com/mauricerkelly/hubot-lunch/tarball/master"
+    "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-hipchat": "~2.6.4",
+    "hubot-lunch": "https://github.com/mauricerkelly/hubot-lunch/tarball/master",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-slack": "^2.1.1"
   },
   "engines": {
     "node": ">= 0.8.x",
